<resources>
    <string name="app_name">Tic`a Tac</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="player1">Player1</string>
    <string name="player2">Player2</string>
    <string name="win">Wins</string>
    <string name="settings">settings</string>
    <string name="reset">reset</string>
    <string name="highscore">high score</string>
    <string name="choose_symbol">Enter a playername</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
